force-app/main/default/objects/Insurance_Agent__c/Insurance_Agent__c.object-meta.xml
<CustomObject>
    <label>Insurance Agent</label>
    <pluralLabel>Insurance Agents</pluralLabel>
    <nameField>
        <type>Text</type>
        <label>Agent Name</label>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>