force-app/main/default/objects/Insurance_Agent__c/fields/Agent_Code__c.field-meta.xml
<CustomField>
    <fullName>Agent_Code__c</fullName>
    <label>Agent Code</label>
    <type>Text</type>
    <length>20</length>
    <unique>true</unique>
</CustomField>